astroids and shooting with cooldown